fix wrong size  pixel

--- a/example/figure/less/figure.less
+++ b/example/figure/less/figure.less
@@ -7,7 +7,7 @@
     display: table;
     padding: 0;
     margin: 0;
-    margin-bottom: @magicNumber - 4pxs;
+    margin-bottom: @magicNumber - 4px;
     border: 2px solid #7F6300;
 
     a {
